# pylasem

./: .gitignore  AUTHORS  MAINTAINERS  Makefile  Makefile.am  acinclude.m4  aclocal.m4  autogen.sh  configure.ac  lasem-types.defs  lasem.defs  lasem.override  lasemmodule.c  pylasem.pc.in
tests/: test_itex.py  test_mathml.py  test_style.py
